# ai-agent

./: attt_deep_dive_part1.md  attt_deep_dive_part2.md  attt_system_overview.md  seabank-ai-agent-thesis-outline.md
agentic-agri/: .gitignore  README.md  docker-compose.yml  env.example  langgraph.json  pyproject.toml
agentic-agri/docs/: chat-fe-integration.md  chat-fe-integration_updated.md  chat-sse-be-spec.md  chat-sse-implementation-plan.md  integrate-metadata-agent-with-filter-service.md  intergare-metadata-agent-with-filter-service.md  plan-implement-metadata-filter-service.md  plan-metadata-neo4j-relationships.md  plan-writer-agent-filter-service.md
agentic-agri/scripts/: metadata_utils.py  postgres_scenario_catalog.py  purge_chat_run_events.py  seed_chat_fixture.py  seed_data_dictionary.py  seed_data_dictionary_1.py  seed_neo4j_relationships.py  seed_postgres_data.py
agentic-agri/src/: main.py
agentic-agri/tests/: chat_graph_mocks.py  conftest.py  llm_cache_utils.py  test_api_health.py  test_chat_api_channels.py  test_chat_api_messages_history.py  test_chat_db_repositories.py  test_chat_phase4_production.py  test_chat_phase5_backlog.py  test_chat_sse_integration.py  test_chat_sse_unit.py  test_filter_service_client.py  test_filter_service_sql_client.py  test_metadata_agent.py  test_metadata_subgraph.py  test_neo4j_metadata_expansion.py  test_opensearch_integration.py  test_postgres_business_scenarios.py  test_query_scope.py  test_sql_normalize.py  test_sql_writer_agent.py  test_supervisor.py  test_supervisor_e2e_live.py  test_writer_agent.py
agentic-filter-2/: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
agentic-filter-2/alembic/: env.py
agentic-filter-2/app/: __init__.py  constants.py  main.py
agentic-filter-2/docs/: README-epics.md  api-fe-integration.md  api-reference.md  architecture_plan.md  epic-01-project-foundation.md  epic-02-permission-data-model.md  epic-03-admin-api.md  epic-04-iam-user-context.md  epic-05-authorization-engine.md  epic-06-postgresql-runtime.md  epic-07-opensearch-runtime.md  epic-08-masking-and-audit.md  huong-dan-chay-va-curl.md  implementation_plan_add_permission_wizard.md  implementation_plan_integrate_metadata_agent.md  implementation_plan_user_role_group_admin.md  milestones_admin_user_role_group.md  plan-integrate-metadata-agent.md  (+3 more)
(+565 files in other folders)
