[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-agent"
version = "0.1.0"
description = "Universal Supervisor Layer using ReAct, Dual-Memory, and Local Local LLM (Ollama)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core LangGraph & LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.0.0",
    
    # Models (Local & Cloud)
    "langchain-ollama",
    "langchain-openai",
    "langchain-google-genai>=1.0.1",
    
    # Memory & Database
    "langgraph-checkpoint-redis",
    "redis",
    "psycopg2-binary",
    
    # OpenSearch & Embedding (Metadata Agent)
    "opensearch-py>=2.4.0",
    "sentence-transformers>=2.2.0",
    
    # Utils
    "python-dotenv",
    
    # Telegram Bot
    "python-telegram-bot>=20.3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest",
    "black",
    "flake8",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agentic-api = "api.__main__:main"